# my_os

./: .gitignore  CMakeLists.txt  README.md
boot/: bochsconfig  loader.s  mbr.s  mbr_screen.s
doc/: protect_mode.md
myosdev/: build.sh
osdev_Bare_Bones/: CMakeLists.txt  build.sh
osdev_bones/: CMakeLists.txt  build.sh  grub.cfg  kernel.c
osdev_kernel/: build_iso.sh  gdt.c
src/: CMakeLists.txt  build.sh
src/boot/: boot.s
src/config/: grub.cfg
src/include/: printf.h  terminal.h
src/kernel/: kernel.c
test/: hello.c
toolchain/: build_toolchain.sh
train/: bochsconfig  boot.inc  build.sh  mbr_disk.s
